--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -48,7 +48,7 @@ layout: default
       </header>
       <section>
 
-<a name="" class="anchor" href="#"><span class="octicon octicon-link"><h1>{{ page.title }}</h1></span></a>
+<h1><a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a>{{ page.title }}</h1>
 <p>{{ page.description }}</p>
 
 {{ content }}
