edited patterns and main english pages

--- a/_includes/cse.html
+++ b/_includes/cse.html
@@ -1,4 +1,4 @@
-<script>
+<script type="text/javascript">
   (function() {
     var cx = '000833618047197874644:rilf4jpvgyo';
     var gcse = document.createElement('script');
