--- a/_includes/footer_back.html
+++ b/_includes/footer_back.html
@@ -1,5 +1,5 @@
 {% if page.category == "ru" %}
-  <p class="view"><a href="/ru">Главная</a></p>
+  <p class="view"><a href="/ru" title="Главная">Главная</a></p>
 {% else %}
-  <p class="view"><a href="/">Home</a></p>
+  <p class="view"><a href="/" title="Home">Home</a></p>
 {% endif %}
