--- a/_includes/header_sharethis.html
+++ b/_includes/header_sharethis.html
@@ -1,3 +1,3 @@
 <script type="text/javascript">var switchTo5x=false;</script>
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script src="http://w.sharethis.com/button/buttons.js" type="text/javascript"></script>
 <script type="text/javascript">stLight.options({publisher: "70dd9cde-7276-47af-8de7-9c43883daf2b", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
