--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -12,15 +12,15 @@ layout: default
           <p>{% include shortdate_to_ru.html %}</p>
           <p><b>Тэги</b>: {{ page.tags }}</p>
           {% if page.tags contains 'offtop' %}
-<!--           do nothing -->
+<!--         do nothing -->
           {% else %}
             <p><b>Похожие посты</b>:<br>
             {% for post in site.related_posts limit:5 %}
               {% if post.tags contains 'offtop' %}
-<!--               do nothing -->
+<!--           do nothing -->
               {% else %}
                 {% if post.category == "ru" %}
-                  <a href="{{ post.url }}">{{ post.title }}</a><br>
+                  <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a><br>
                 {% endif %}
               {% endif %}
             {% endfor %}
@@ -30,15 +30,15 @@ layout: default
           <p>{{ page.date | date_to_string }}<br></p>
           <p><b>Tags</b>: {{ page.tags }}</p>
           {% if page.tags contains 'offtop' %}
-<!--       do nothing -->
+<!--         do nothing -->
           {% else %}
             <p><b>Related posts</b>:<br>
             {% for post in site.related_posts limit:5 %}
               {% if post.tags contains 'offtop' %}
-<!--               do nothing -->
+<!--           do nothing -->
               {% else %}
                 {% if post.category != "ru" %}
-                  <a href="{{ post.url }}">{{ post.title }}</a><br>
+                  <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a><br>
                 {% endif %}
               {% endif %}
             {% endfor %}
@@ -48,7 +48,7 @@ layout: default
       </header>
       <section>
 
-<h1><a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a>{{ page.title }}</h1>
+<h1><a href="#" class="anchor" name="title"><span class="octicon octicon-link"></span></a>{{ page.title }}</h1>
 <p>{{ page.description }}</p>
 
 {{ content }}
