updated papers Refactoring of an English part is done

--- a/_includes/prj_scr.html
+++ b/_includes/prj_scr.html
@@ -1,8 +1,8 @@
 <figure class="sign" style="float:none;">
   {% if page.category == "ru" %}
-    <a href="/resources/screenshots/{{ scrname }}.png" title="Полный размер">
+    <a href="/resources/screenshots/{{ scrname }}.png" title="Полный размер" type="image/png">
   {% else %}
-    <a href="/resources/screenshots/{{ scrname }}.png" title="Full size">
+    <a href="/resources/screenshots/{{ scrname }}.png" title="Full size" type="image/png">
   {% endif %}
     <img src="/resources/preview/{{ scrname }}_prev.jpg" alt="{{ scrname }}">
   </a><br>
