test search form

--- a/_includes/cse.html
+++ b/_includes/cse.html
@@ -1,13 +1,11 @@
-<script type="text/javascript">
-  (function() {
-    var cx = '000833618047197874644:rilf4jpvgyo';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//www.google.com/cse/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:search></gcse:search>
+<form name="gcse" role="search" action="http://www.google.ru/cse">
+  <input type="hidden" name="cx" value="000833618047197874644:rilf4jpvgyo">
+  <input type="hidden" name="ie" value="UTF-8">
+  {% if page.category == "ru" %}
+    <input type="text" name="q" placeholder="Поиск по сайту">
+    <button type="submit" name="sa">Найти</button>
+  {% else %}
+    <input type="text" name="q" placeholder="Site search">
+    <button type="submit" name="sa">Search</button>
+  {% endif %}
+</form>
