--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -48,7 +48,7 @@ layout: default
       </header>
       <section>
 
-<h1><a href="#" class="anchor" name="title"><span class="octicon octicon-link"></span></a>{{ page.title }}</h1>
+<h1><a href="#" class="anchor" id="title"><span class="octicon octicon-link"></span></a>{{ page.title }}</h1>
 <p>{{ page.description }}</p>
 
 {{ content }}
