remove X-UA-Compatible

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{ page.title }}</title>
-    <meta name="author" content="Evgeniy Alekseev">
+    <meta name="author" content="Unknown" >
     <meta name="description" content="arcanis' homepage">
     <meta name="keywords" content="{{ page.tags }}">
     <link href="/authors" rel="license" type="text/html">
