--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -82,10 +82,10 @@ figure.img figcaption {
 }
 
 /* spoiler */
-.spoiler > input + .box > blockquote {
+.spoiler > input + .box > p.spoilerbody {
   display: none;
 }
-.spoiler > input:checked + .box > blockquote {
+.spoiler > input:checked + .box > p.spoilerbody {
   display: block;
 }
 .spoiler > input[type="checkbox"] {
@@ -111,7 +111,7 @@ figure.img figcaption {
 .spoiler > input + .box > span.open {
   display: inline;
 }
-.spoiler blockquote,
+.spoiler p.spoilerbody,
 .spoiler {
   border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -123,7 +123,7 @@ figure.img figcaption {
 .spoiler {
   overflow-x: hidden;
 }
-.spoiler blockquote {
+.spoiler p.spoilerbody {
   min-height: 23px;
   margin: 0;
   padding: 4px 4px 4px 10px;
