--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -49,6 +49,6 @@ layout: default
       <section>
 
 <h1><a href="#" class="anchor" id="title"><span class="octicon octicon-link"></span></a>{{ page.title }}</h1>
-<p>{{ page.description }}</p>
+{{ page.description }}
 
 {{ content }}
