add paper, fix imaging

--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -49,7 +49,7 @@ layout: default
       <section>
 
 <h1><a href="#" class="anchor" id="title"><span class="octicon octicon-link"></span></a>{{ page.title }}</h1>
-{{ page.description }}
+<p>{{ page.description }}</p>
 <br>
 
 {{ content }}
