try to move to https

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
         document.createElement('figcaption');
       </script>
     <![endif]-->
+    {% include ssl-redirect.html %}
     {% include google_analytics.html %}
     {% if page.share == true %}
       {% include header_sharethis.html %}
