drop sign footer

--- a/_includes/footer_sign.html
+++ b/_includes/footer_sign.html
@@ -9,7 +9,7 @@
           <img src="/resources/en.png" alt="en">
         </a>
     {% endif %}
-    <small>Расположено на GitHub Pages. <a href="/ru/authors" title="Авторы">Авторы</a></small>
+    <small><a href="/ru/authors" title="Авторы">Авторы</a></small>
   {% else %}
     {% if page.hastr == true %}
       {% if page.type == "paper" %}
@@ -20,6 +20,6 @@
           <img src="/resources/ru.png" alt="ru">
         </a>
     {% endif %}
-    <small>Hosted on GitHub Pages. <a href="/authors" title="Authors">Authors</a></small>
+    <small><a href="/authors" title="Authors">Authors</a></small>
   {% endif %}
 </p>
