--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -10,7 +10,7 @@ layout: default
         {% if page.category == "ru" %}
           {% assign post = page %}
           <p>{% include shortdate_to_ru.html %}</p>
-          <p><b>Тэги</b>: {{ page.tags }}</p>
+          <p><b>Тeги</b>: {{ page.tags }}</p>
           {% if page.tags contains 'offtop' %}
 <!--         do nothing -->
           {% else %}
