--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 
     <link href="/resources/css/styles.css" rel="stylesheet" type="text/css">
     <link href="/resources/css/syntax.css" rel="stylesheet" type="text/css">
+    <link href="/resources/octicons/octicons.css" rel="stylesheet" type="text/css">
     <link href="/resources/icon.ico" rel="shortcut icon" type="image/x-icon">
     {% if page.category == "ru" %}
       <link href="/ru/feed.xml" title="arcanis' blog" rel="alternate" type="application/rss+xml">
