try to drop http(s): from links

--- a/_includes/cse.html
+++ b/_includes/cse.html
@@ -1,4 +1,4 @@
-<form action="https://www.google.ru/cse" id="search-block-form" name="gcse">
+<form action="//www.google.ru/cse" id="search-block-form" name="gcse">
   <input type="hidden" name="cx" value="000833618047197874644:rilf4jpvgyo">
   <input type="hidden" name="ie" value="UTF-8">
   {% if page.category == "ru" %}
