change project structure to more pretty one

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,7 +10,7 @@ layout: default
         <h1>{{ page.title }}</h1>
         <p class="view">
           {% if page.category == "ru" %}
-            <a href="#info" title="Информация">Общая информация</a><br>
+            <a href="#" title="Информация">Общая информация</a><br>
             <a href="#install" title="Установка">Установка</a><br>
             <a href="#howto" title="Использование">Использование</a><br>
             <a href="#config" title="Настройка">Настройка</a><br>
@@ -20,7 +20,7 @@ layout: default
             {% endif %}
             <a href="#links" title="Ссылки">Ссылки</a>
           {% else %}
-            <a href="#info" title="Information">General information</a><br>
+            <a href="#" title="Information">General information</a><br>
             <a href="#install" title="Installation">Installation guide</a><br>
             <a href="#howto" title="How-to">How to use</a><br>
             <a href="#config" title="Configuration">Configuration</a><br>
