--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,11 @@
     {% endif %}
   </head>
 
+  <body>
+  {% if page.use_math == true %}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+  {% endif %}
+
 {{ content }}
 
 {% if page.comment == true or layout.comment == true %}
